--- a/my-assets/footers-styles.css
+++ b/my-assets/footers-styles.css
@@ -156,3 +156,67 @@ body {
   .footers-items-4 li a {
     text-decoration: none;
  }
+
+ /* Acá epiezan los estilos del footer-5*/
+
+.brand-logo-5 {
+    height: 32px;
+}
+
+ .footer-5-container {
+    margin-top: 100px;
+ }
+
+ .footer-5 {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 32px;
+    border-bottom: 1px solid var(--color5);
+    margin-left: 100px;
+    margin-right: 100px;
+    padding-bottom: 32px;
+ }
+
+ .footers-items-5 {
+    list-style: none;
+    margin-top: 0;
+    padding-left: 0;
+ }
+
+  .footers-items-5 h3 {
+    margin-bottom: 8px;
+    margin-top: 0;
+ }
+
+   .footers-items-5 li {
+    margin-bottom: 8px;
+ }
+
+  .footers-items-5 li a {
+    text-decoration: none;
+ }
+
+ .right-footer {;
+}
+
+ .right-footer h3 {
+     margin-top: 0;
+ }
+
+.botton-footer-5 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 100px 20px 100px;
+}
+
+.botton-companny-5 {
+    display: flex;
+    align-items: center;
+}
+
+.botton-footers-items-5 img {
+    height: 32px;
+    margin-left: 10px;
+    cursor: pointer;
+}
