dogs lovers III

--- a/dogsApiRest/styles.css
+++ b/dogsApiRest/styles.css
@@ -62,11 +62,11 @@ body {
     margin-bottom: 50px;
 }
 
-.random-articules-container article {
+.random-articule {
     margin: 4px;
 }
 
-article {
+.random-articule {
     position: relative;
 }
 
@@ -86,7 +86,10 @@ article {
     border-radius: 24px;
 }
 
-.save-random-button {
+.save-random-button1,
+.save-random-button2,
+.save-random-button3,
+.save-random-button4 {
     position: absolute;
     top: 5%;
     left: 50%;
@@ -103,11 +106,90 @@ article {
     
 }
 
-.random-image-container:hover .save-random-button {
+.random-image-container:hover .save-random-button1 {
+    opacity: 1;
+}
+
+.random-image-container:hover .save-random-button2 {
+    opacity: 1;
+}
+
+.random-image-container:hover .save-random-button3 {
+    opacity: 1;
+}
+
+.random-image-container:hover .save-random-button4 {
     opacity: 1;
 }
 
 .error-span {
     font-size: 32px;
     color: orange;
+}
+
+/*Aqui empiezan los estilos de la sección de favoritos*/
+
+.favorites-title {
+    text-align: center;
+    background-color: var(--color5);
+    padding-bottom: 24px;
+    padding-top: 12px;
+    margin-bottom: 0;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+}
+
+.favorite-image { /*to make all images with equal size */
+    display: block;
+    object-fit: cover;
+    width: 250px;
+    height: 250px;
+    border-radius: 24px;
+
+}
+
+.favorites-horizontal-container {
+    margin-top: 0px;
+    margin-bottom: 100px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    background-color: var(--color4);
+    width: 100%; /* to scroll horizontaly*/
+    overflow-x: scroll; /* to scroll horizontaly*/
+    white-space: nowrap; /* to scroll horizontaly*/
+    display: flex;
+}
+
+.scroll-content {
+    display: flex; /* to scroll horizontaly*/
+}
+
+.favorite-article {
+    margin-right: 32px;
+}
+
+.favorite-image-container { /*to make a button invisble until hovering over*/
+    position: relative;
+    display: inline-block;
+}
+
+.delete-favorite-button { /*to make a button invisble until hovering over*/
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    padding: 10px 20px;
+    background-color: var(--color5);
+    color:white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    
+}
+
+.favorite-image-container:hover .delete-favorite-button { /*to make a button invisble until hovering over*/
+    opacity: 1;
 }
