--- a/dogsApiRest/styles.css
+++ b/dogsApiRest/styles.css
@@ -150,7 +150,7 @@ body {
 
 .favorites-horizontal-container {
     margin-top: 0px;
-    margin-bottom: 100px;
+    margin-bottom: 24px;
     padding-top: 24px;
     padding-bottom: 24px;
     background-color: var(--color4);
@@ -217,6 +217,27 @@ body {
 }
 
 .form-style {
-    width: 100%;
+    display: flex;
+    width: 50%;
+    justify-content: center;
     align-items: center;
+}
+
+.form-style button {
+    height: 48px;
+}
+
+.select-input {
+    color: #962C4C;
+    cursor: pointer;
+}
+
+.upload-button {
+    height: 48px;
+    background-color:var(--color4) ;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
